<resources>
    <string name="app_name">Checkes and Chess</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="play_checkers">Plary Checkers</string>
    <string name="play_chess">Play Chess</string>
    <string name="username">Username:</string>
    <string name="room_id">Room ID:\u0020</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_room">Create Room</string>
    <string name="join">Join</string>
    <string name="player1">You:\u0020</string>
    <string name="player2">Op:\u0020</string>
    <string name="surrender">Surrender</string>
    <string name="credit">Credits</string>
    <string name="logo">Logo</string>
    <string name="images">Images</string>
    <string name="sound">Sounds</string>

</resources>
